--- a/index.html
+++ b/index.html
@@ -1,102 +1,519 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign-Up</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body onload="adjustColorsBasedOnTime()">
-<main>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kingsley Effiong's Prtfolio</title>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+<div id="app">
+<div class="top-container">
+<div class="top">
+<div class="name">
+<h1>KINGSLEY</h1>
+</div>
+
+
+
+<a href="#hom"><img src="home.png" alt="contact icon" class="top-icon"></a>
+
+<img src="mail.png" alt="home icon" class="top-icon contact-btn" onclick="mail()">
+
+<div class="nav">
+<div class="top">
+<ul style="display:flex;">
+<a href="#hom" class="hom"><li>Home</li></a>
+
+<a href="#about" class="ab"><li>About</li></a>
+<a href="#project" class="pro"><li>Projects</li></a>
+<a href="#service" class="ser"><li>Services</li></a>
+</ul>
+
+<button type="button" class="top-btn contact-btn" onclick="mail()">CONTACT</button>
+</div>
+</div>
+
+<div class="hamburger" onclick="menuBtn()" id="menuIcon">
+
+<hr class="hr" id="one">
+<hr class="hr" id="two">
+<hr class="hr" id="three">      
+</div>
+</div>
+<hr>
+</div>
+
+<div class="space"></div>
+
+<div class="all">
+
+
+<div id="hom">
+<div class="container">
+<div class="digital">
+<h1><span id="design">DESIGNING</span> <span id="digit">DIGITAL</span> <span id="ex">EXPERIENCES</span> <span id="that">THAT</span> <span id="delight">DELIGHT</span> <span id="users">USERS</span> <span id="stop">.</span></h1>
+<div class="space"></div>
+<div class="space"></div>
+<div class="space"></div>
+<div class="space"></div>
+</div>
+</div>
+<hr>
+</div>
+
+
+<section id="about">
+<div class="space"></div>
+<div class="container">
+<div class="digital">
+<img src="pic.jpeg" alt="profile pic"class="pic"/>
+</div>
+</div>
+
+
+
+<div class="container">
+<div class="about">
+<strong><p>Hello!</p></strong>
+<br>
+
+<p>My name is Kingskey Effiong, and I am a UI/UX designer.</p>
+
+
+<p>I specialize in creating visually stunning and user-friendly digital products such as applications, websites, and other digital platforms.</p>
+
+
+<p>My goal is to design digital experiences that are not only visually appealing, but also easy to navigate and intuitive for users.</p>
+
+
+<div class="greet" style="font-size:18px; color:white;">
+<h4>Say Hi!</h4>
+<strong><h4 class="gret" onclick="hi()">>></h4></strong>
+</div>
+
+
+</div>
+</div>
+
+<hr>
+</section>
+<div style="height:50px;background-color: #1b1b1b;"></div>
+
+<div class="container">
+<div class="greet">
+<div class="small-img">
+<img src="first.jpeg" class="photos" alt="profile pic">
+</div>
+
+<div class="small-img">
+<img src="second.jpeg" class="photos" alt="profile pic">
+</div>
+</div>
+
+</div>
+
+<div class="container">
+<div class="digital">
+<h2>Design goes beyond mere aesthetics; it’s about crafting meaningful experiences. Each project presents a chance to push boundaries, question conventions, and create something truly extraordinary.</h2>
+</div>
+</div>
+
+<div class="container">
+<div class="about">
+<div class="photos-con">
+<img src="circle.png" class="photos" alt="profile pic">
+</div>
+</div>
+</div>
+<hr>
+
+<div class="container ">
+<div class="digital">
+<img src="ui.jpeg" alt="profile pic"class="pic"/>
+</div>
+</div>
+
+<div class="container ">
+<div class="about">
+<p>Improve your digital product through a design focused on user needs. Together, we can turn your ideas into reality!</p>
+</div>
+</div>
+
+
+<div class="btn-container">
+<button type="button" class="btn" onclick="collabo()">LET'S COLLABORATE</button>
+</div>
+<hr> 
+
+
+
+<section id="project">
+<div class="container">
+<div class="digital">
+<h1>PROJECTS</h1>
+</div>
+</div>
+<hr>
+
+<div class="container">
+<div class="digital">
+<h1 class="odd">01</h1>
+</div>
+</div>
+<hr>
+
+<div class="container">
+<div class="digital">
+<img src="case.jpeg" alt="case image"class="pic"/>
+</div>
+</div>
+
+<div class="container">
+<div class="about">
+<p>This educational platform delivers a streamlined and enjoyable approach to information retention through a spaced repetition method, crafted with a focus on user experience.</p>
+</div>
+</div>
+<hr>
+<div class="container">
+<div class="about">
+<h1 class="even">02</h1>
+</div>
+</div>
+
+<div class="container">
+<div class="digital">
+<img src="brand.jpeg" alt="brabd image"class="pic"/>
+</div>
+</div>
+<div class="container">
+<div class="greet" style="font-size:18px; color:white;">
+<h4>Brand Identity & Website</h4>
+<strong><h4 class="gret" onclick="brand()">>></h4></strong>
+</div>
+</div>
+<div class="container">
+<div class="about">
+<p>This educational platform delivers a streamlined and enjoyable approach to information retention through a spaced repetition method, crafted with a focus on user experience.</p>
+</div>
+</div>
+<hr>
+<div class="container">
+<div class="digital">
+<h1 class="odd">03</h1>
+</div>
+</div>
+<hr>
+<div class="container">
+<div class="digital">
+<img src="learn.jpeg" alt="learn image"class="pic"/>
+</div>
+</div>
+
+<div class="container">
+<div class="greet" style="font-size:18px; color:white;">
+<h4> Learn center Website
+Redesign</h4>
+<strong><h4 class="gret" onclick="mail()">>></h4></strong>
+</div>
+</div>
+
+<div class="container">
+<div class="about">
+<p>This educational platform delivers a streamlined and enjoyable approach to information retention through a spaced repetition method, crafted with a focus on user experience.</p>
+</div>
+</div>
+
+<div class="container">
+<div class="about">
+<h1 class="even">04</h1>
+</div>
+</div>
+<hr>
+
+<div class="container">
+<div class="digital">
+<img src="come.jpeg" alt="conibg soon image"class="pic"/>
+</div>
+</div>
+
+<div class="container">
+<div class="greet" style="font-size:18px; color:white;">
+<h4>Welcome</h4>
+</div>
+</div>
+
+<div class="container">
+<div class="about">
+<p>Exciting things are in the works! My next project showcase will be revealed soon.</p>
+</div>
+</div>
+<hr>
+</section>
+
+
+<section id="service">
+<div class="container">
+<div class="services">
+<h1>SERVICES</h1>
+</div>
+</div>
+<hr>
+
+
+<div class="container">
+<div class="service-img">
+<img src="ux.jpeg" alt="ui image"class="pic"/>
+</div>
+</div>
+
+
+<div>
+<div class="container">
+<div class="greet" style="font-size:22px; color:white;">
+<strong><h4>UI/UX DESIGN</h4></strong>
+</div>
+</div>
+
+<div class="container">
+<div class="about">
+<p>Designing user-centered interfaces that balance form and function to meet the needs of users.</p>
+</div>
+</div>
+
+
+<div class="container">
+<div class="service-img">
+<img src="mobile.jpeg" alt="mobile app image"class="pic"/>
+</div>
+</div>
+
+<div class="container">
+<div class="greet" style="font-size:22px; color:white;">
+<strong><h4>MOBILE APP DESIGN</h4></strong>
+</div>
+</div>
+
+<div class="container">
+<div class="about">
+<p>Designing engaging and intuitive mobile apps that meet user needs and provide a seamless user experience.</p>
+</div>
+</div>
+
+
+<div class="container">
+<div class="service-img">
+<img src="land.jpeg" alt=" landing page image"class="pic"/>
+</div>
+</div>
+
+<div class="container">
+<div class="greet" style="font-size:22px; color:white;">
+<strong><h4>LANDING PAGE DESIGN</h4></strong>
+</div>
+</div>
+
+<div class="container">
+<div class="about">
+<p>Creating conversion-focused landing pages that drive user engagement and drive business goals.</p>
+</div>
+</div>
+
+
+
+<div class="container">
+<div class="service-img">
+<img src="uxx.jpeg" alt="ux research image"class="pic"/>
+</div>
+</div>
+
+<div class="container">
+<div class="greet" style="font-size:22px; color:white;">
+<strong><h4>UX RESEARCH</h4></strong>
+</div>
+</div>
+
+<div class="container">
+<div class="about">
+<p>Conducting user research to gain insights into user behavior and needs, inform design decisions, and improve overall user experience.</p>
+</div>
+</div>
+
+
+<div class="container">
+<div class="service-img">
+<img src="web.jpeg" alt="website design image"class="pic"/>
+</div>
+</div>
+
+<div class="container">
+<div class="greet" style="font-size:22px; color:white;">
+<strong><h4>WEBSITE DESIGN AND DEVELOPMENT</h4></strong>
+</div>
+</div>
+
+<div class="container">
+<div class="about">
+<p>Creating custom, visually appealing, and user-friendly websites using the latest design and development techniques.</p>
+</div>
+</div>
+
+<hr>
+<div class="container">
+<div class="services">
+<h1>MY DESIGN PROCESS</h1>
+</div>
+</div>
+<hr>
+
+
+<div class="container">
+<div class="define" style="font-size:18px; color:white;">
+<h4 class="def">01</h4>
+<strong><h4>DEFINING PRODUCT</h4></strong>
+</div>
+</div> 
+<div class="container">
+<div class="about">
+<p>During the initial client meeting, the purpose and goal of the project are discussed. A project plan, timeline, and scope are defined.</p>
+</div>
+</div>
+<hr>
+
+
+
+<div class="container">
+<div class="define" style="font-size:18px; color:white;">
+<h4 class="def">02</h4>
+<strong><h4>RESEARCH</h4></strong>
+</div>
+</div> 
+<div class="container">
+<div class="about">
+<p>Analyzing similar projects and researching competitors. Conducting competitive analysis, consumer behavior and market trends.</p>
+</div>
+</div>
+<hr>
+
+
+
+<div class="container">
+<div class="define" style="font-size:18px; color:white;">
+<h4 class="def">03</h4>
+<strong><h4>IDEATIOIN</h4></strong>
+</div>
+</div> 
+<div class="container">
+<div class="about">
+<p>Outlining the product's development strategy using personas, scenarios, and storyboards.</p>
+</div>
+</div>
+<hr>
+
+
+
+<div class="container">
+<div class="define" style="font-size:18px; color:white;">
+<h4 class="def">04</h4>
+<strong><h4>SKETCHING</h4></strong>
+</div>
+</div> 
+<div class="container">
+<div class="about">
+<p>Visualising the general layout. Creating the first low-fidelity wireframe. In most cases, l use Figma.</p>
+</div>
+</div>
+<hr>
+
+
+
+<div class="container">
+<div class="define" style="font-size:18px; color:white;">
+<h4 class="def">05</h4>
+<strong><h4>DEFINING VISUAL
+MOOD</h4></strong>
+</div>
+</div> 
+<div class="container">
+<div class="about">
+<p>Creating mood boards and setting the visual style.</p>
+</div>
+</div>
+<hr>
+
+
+<div class="container">
+<div class="define" style="font-size:18px; color:white;">
+<h4 class="def">06</h4>
+<strong><h4>CREATING PROTOTYPE</h4></strong>
+</div>
+</div> 
+<div class="container">
+<div class="about">
+<p>Creating a full high fidelity prototype.
+Design is responsive. I am also documenting interactions, states and styles.</p>
+</div>
+</div>
+<hr>
+
+
+
+<div class="container">
+<div class="define" style="font-size:18px; color:white;">
+<h4 class="def">07</h4>
+<strong><h4>USABILITY TESTING</h4></strong>
+</div>
+</div> 
+<div class="container">
+<div class="about">
+<p>Conducted usability tests with thorough data analysis for meaningful insights and improved product usability.</p>
+</div>
+</div>
+<hr>
+
+
+
+<div class="container">
+<div class="define" style="font-size:18px; color:white;">
+<h4 class="def">08</h4>
+<strong><h4>DESIGN
+IMPROVEMENTS</h4></strong>
+</div>
+</div> 
+<div class="container">
+<div class="about">
+<p>Research data is analyzed and design</p>
+</div>
+</div>
+<hr>
+</section>
+
+<div class="best">
+       <p>&copy; 2024 <strong>Kingsley Effiong</strong>. All rights reserved.</p>
+</div>
+
+</div>
+</div>
+
+
+
+          <div id="modal" class="modal">
+                <div class="modal-content">
+<div class="space"></div>
+<div class="space"></div>
+
+                    <h5 onclick="closeModal()" style=" float:right;">Back</h5>
+
 <br><br>
 
-<!--<div class="image">
-<br>
-<img src="logo.jpeg" class="product-img assembly">
-</div>-->
+<h4>effiongkingsley1185@gmail.com</h4>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign-Up</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body onload="adjustColorsBasedOnTime()">
-<br><br>
+<a href="https://www.linkedin.com/in/kingsley-effiong-b70992308?trk=contact-info"><h4>Linkedin</h4></a>
 
-<!--<div class="image">
-<br>
-<img src="logo.jpeg" class="product-img assembly">
-</div>-->
+                </div>
+            </div>
 
-
-<div class="body">
-    <div class="cube">
-        <div class="face front"><img src="chat.jpeg" alt="Front"></div>
-        <div class="face back"><img src="post.jpeg" alt="Back"></div>
-        <div class="face left"><img src="IMG_9694.png" alt="Left"></div>
-        <div class="face right"><img src="products.png" alt="Right"></div>
-        <div class="face top"><img src="laughing .png" alt="Top"></div>
-        <div class="face bottom"><img src="connect.jpeg" alt="Bottom"></div>
-    </div>
-</div>
-<br>
-
-    <h2 style="text-align:center;">PASSTIME</h2>
-
-    <h2 style="text-align:center;" id="text"></h2>
-
-<br>
-<div style="text-align:center;">
-<div style="display:flex; gap:1rem;">
-<a href="/signup">
-    <button class="btn">Sign Up</button>
-  </a>
-<a href="/login">
-  <button class="btn">Log In</button>
-</a>
-</div>
-</div>
-
-</main>
- <script>
-
-        function adjustColorsBasedOnTime() {
-          const date = new Date();
-          const hours = date.getHours();
-          const body = document.body;
-
-          if (hours >= 6 && hours < 18) { // Daytime (6am to 5:59pm)
-            body.style.backgroundColor = "white";
-            body.style.color = "black";
-          } else { // Nighttime (6pm to 5:59am)
-            body.style.backgroundColor = "black";
-            body.style.color = "white";
-          }
-        }
-
-
-        const texts = [
-            'Display your productivity😃',
-            'Explore new opportunities 🌐',
-            'Share your experiences 📝',
-            'Discover amazing content 📚',
-            'Stay connected with friends 👫',
-            'Join exciting communities 💬'
-        ];
-        let currentIndex = 0;
-
-        function changeText(newText) {
-            document.getElementById('text').textContent = newText;
-        }
-
-        setInterval(() => {
-            changeText(texts[currentIndex]);
-            currentIndex = (currentIndex + 1) % texts.length; // Cycle through texts
-        }, 3000); // Change text every 3 seconds
-
-  </script>
-</body>
+	<script src="index.js"></script>
+  </body>
 </html>
